--- a/catphoto.html
+++ b/catphoto.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en">
   <head>
-    <title>CatPhotoApp</title>
+    <title>Index</title>
   </head>
   <body>
     <h1>CatPhotoApp</h1>
